fixed alignment in header

--- a/my_app/static/css/cover.css
+++ b/my_app/static/css/cover.css
@@ -1,6 +1,6 @@
 /*
- * Globals
- */
+* Globals
+*/
 
 /* Links */
 a,
@@ -30,24 +30,29 @@ a:hover {
 
 .fa {
   color: #000028;
-  margin-right: 10px;
+  margin-right: 5px;
+}
+
+.fa-2x {
+  font-size: 1.5em;
 }
 
 #right_stuff {
   margin-right: 150px;
-  margin-top: 5px;
-}
-
-#about_me {
-  color: #000028;
-  font-size: 24px;
+  margin-top: 7px;
 }
 
 #slide_link {
   color: #000028;
-  font-size: 24px;
-  margin-bottom: 15px;
+  font-size: 20px;
 }
+
+#about_me {
+  color: #000028;
+  font-size: 20px;
+}
+
+
 
 .navbar-default {
   opacity: .8;
@@ -57,8 +62,8 @@ a:hover {
   color: #000028;
   font-weight: bold;
   font-size: 42px;
-  margin-top: 3px;
-  margin-bottom: -2px;
+  margin-top: 1px;
+  margin-bottom: -5px;
   margin-left: 150px;
   float:left;
 }
@@ -92,11 +97,11 @@ a:hover {
 }
 
 .circle {
-    border-radius: 50%;
-    width: 8px;
-    height: 8px;
-    background-color: #f9f9f9;
-  }
+  border-radius: 50%;
+  width: 8px;
+  height: 8px;
+  background-color: #f9f9f9;
+}
 
 #logo1 {
   width: 25px;
@@ -190,7 +195,7 @@ a:hover {
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -208,8 +213,8 @@ a:hover {
 
 
 /*
- * Header
- */
+* Header
+*/
 .masthead-brand {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -258,8 +263,8 @@ a:hover {
 
 
 /*
- * Cover
- */
+* Cover
+*/
 
 .cover {
   padding: 0 20px;
@@ -274,8 +279,8 @@ a:hover {
 }
 
 /*
- * Footer
- */
+* Footer
+*/
 
 .mastfoot {
   color: #999; /* IE8 proofing */
@@ -292,12 +297,12 @@ a:hover {
 }
 
 #eventForm .form-control-feedback {
-    top: 0;
-    right: -15px;
+  top: 0;
+  right: -15px;
 }
 /*
- * Affix and center
- */
+* Affix and center
+*/
 
 @media (min-width: 768px) {
   /* Pull out the header and footer */
